SpanHome.css
html,body {
    font-family: "Felipa", cursive;
    box-sizing: border-box;
    background-color: rgb(36, 55, 88);
    border: rgba(251, 251, 251, 0.896) 2px solid;
    padding-bottom: 5px;
    padding-top: 5px;
    padding-right: 5px;
    padding-left: 5px;
    background-size: cover;
    background-repeat: no-repeat;
  }
  
  nav{
    display: flex;
    justify-content: space-between;
    margin-top: 15px;
  }
  
  .nav-left a, .nav-right a,.mobileNav a{
    color: rgb(0, 0, 0);
    font-size: 1.5rem;
    font-weight:bold;
    letter-spacing: 2px;
    text-decoration: none;
    padding: 0px 10px;
    margin: 0px 5px;
    border: rgba(13, 23, 41, 0.21) 3px solid;
    text-shadow: rgba(247, 243, 243, 0.896) .5px 1px;
    border-radius: 7px;
    box-shadow: 2px 2px 10px 2px rgba(3, 3, 20, 0.2);
    
    //background-color: aqua;
  
  }
  .mobileNav a{
    margin: 10px;
  }
  .mobileNav{
    width: 170px;
    background-color: rgb(114, 168, 226);
    height: 65vh;
    display: none;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: fixed;
    z-index: 2;  
    right: -190px;
    //margin-top: -60px;
    top: 30px;
    border: 2px solid white;
    border-radius: 20px;
    transition: transform 0.5s;
    text-align: center;
  }
  
  .openDrawer{
    transform: translateX(-220px);
  
  }
  .mobileNav .closeDrawer{
    color: rgb(198, 27, 27);
    border-radius: 50%;
    margin-left: 59px;
    width: 20px;
  }
    
     .hamburger{
      display: none;
     }
  
     @media screen and (max-width: 700px){
      .hamburger{
      height: 30px;
      width: 40px;
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center; 
    }
  
    nav{
      justify-content: flex-end;
      margin: 0;
        
    }
     .nav-left,.nav-right{
      display: none;
    } 
    .mobileNav {
      display: flex;
      align-content: stretch;
      justify-content: space-evenly;
      align-items: stretch;
    }body{
      margin: 0 auto;
    }   
  
     }
  
    
  nav a:hover{
    color: rgb(7, 7, 7);
    text-shadow: none;
  }
   
   .bar1,.bar2,.bar3{
    background-color: black;
    height: 4px;
    width: 30px;
    border-radius: 10px;
    margin: 3px;
  
  }
  
  h1 {
    text-align: center;
    color: rgb(39, 18, 160);
    letter-spacing: 10px;
    text-shadow: rgba(251, 251, 251, 0.896) 1px 2px;
    margin: 0px 100px 20px 100px;
    padding: 15px 0;
    font-size: 3.5rem;
    border-bottom: 3px rgba(9, 84, 214, 0.275) solid;
    // background-color: aquamarine;
  }
  @media screen and (max-width: 900px) {
    h1 {
      font-size: 2.3rem;
      margin: 15px 7px 20px 7px;
      letter-spacing: 2px;
      padding: 0;
    }
    h2{
      margin: 0;
    }
   
  }
  @media screen and (max-width: 700px){
    h1{
      margin-top: 12px;
      padding: 0;
    }
  }
  
  
  .text-container {
    border: solid 5px rgba(21, 7, 228, 0.748);
    margin-left: auto;
    margin-right: auto;   
    padding: 0px 40px;
    // background-color: brown;
     
  }
  
  @media screen and (max-width: 900px) {
    .text-container {
      padding: 6px;
    }
  }
  
  .paragraph-container {
    text-align: center;
    flex: 1;
       //background-color: bisque;
       margin-top: 20px;
  }
  
  .paragraph {
    color: rgb(7, 2, 45);
    font-size: 3rem;
    padding-top: 0;
    padding-bottom: 0;
    padding-left: 30px;
    padding-right: 30px;
    letter-spacing: 6px;
    line-height: 1.5em;
    font-weight: 800;
    text-shadow: rgb(245, 241, 241) 1px 1px;
    margin: 0;
    //  background-color: aqua;
  }
  
  @media screen and (max-width: 900px) {
    .paragraph {
      font-size: 2.5rem;
      letter-spacing: 2px;
      padding-top: 0;
      padding-right: 7px;
      padding-bottom: 0;
      padding-left: 7px;
    }
  }
  
  p::first-letter {
    font-size: 5rem;
    font-weight: bold;
    color: rgb(216, 7, 7);
    text-shadow: rgba(6, 15, 18, 0.89) 2px 2px;
  }
  
  @media screen and (max-width: 786px) {
    p::first-letter {
      font-size: 3.5rem;
    }
  }
  
  .book {
    color: rgb(31, 13, 127);
    font-size: 1.6rem;
    text-shadow: rgba(251, 251, 251, 0.896) 1px 2px;
    letter-spacing: .04em;
    font-weight: bold;
  }
  
  .book::first-letter {
    font-size: 2.4rem;
    font-weight: bold;
    color: rgb(216, 7, 7);
    text-shadow: rgba(6, 15, 18, 0.89) 2px 2px;
  }
  
  .verses {
    font-size: 1em;
    letter-spacing: .05em;
  }
  
  .version {
    font-size: 0.6em;
    font-weight: bold;
  }
  
  .button-container {
    display: flex;
    align-items: flex-start;
    justify-content: space-around;
    // background-color: rgba(49, 136, 136, 0.627);
  }
  
  
  hr{
    border-bottom: 3px rgba(9, 84, 214, 0.24) solid;
    margin: 30px 100px;
   
  }
  
  .animateBar1{
    animation: fadeBar1 .25s forwards;
  }
  .animateBar2{
    animation: fadeBar2 .5s forwards;
  }
  .animateBar3{
    animation: fadeBar3 .25s forwards;
  
  }
  
  @keyframes fadeBar1 {
    from {
      transform: scalex(1);
      opacity: 1;
    }
     to{
      transform: scalex(0);
      opacity: 0;
  
  
    }
  }
  
  @keyframes fadeBar2 {
    from {
      transform: scalex(1);
      opacity: 1;
    }
     to{
      transform: scalex(0);
      opacity: 0;
  
  
    }
    
  }
  @keyframes fadeBar3 {
    from {
      transform: scalex(1);
      opacity: 1;
    }
     to{
      transform: scalex(0);
      opacity: 0;
  
  
    }
  }  

